--- a/Coat Trick 2.1/style.css
+++ b/Coat Trick 2.1/style.css
@@ -58,6 +58,12 @@
         width: 30px;
         height: 30px;
     }
+    #imgpromocao{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
     
 }
 form button{
